--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
     <h1>Fight Center</h1>
     <p>New martial arts-themed gym opening soon!</p>
-    <button>Call us! +1239 123 999 123 999 000</button>
+    <button>Call us! +1239-123-999-123-abc</button>
 </div>
 </body>
 </html>
